# GitHubCopilotPreq

./: .gitignore  README.md
samples/boost/: main.cpp
samples/cpp/: README.md  run_all.sh
samples/cpp/boost/: CMakeLists.txt  Makefile  MessageProcessor.cpp  MessageProcessor.h  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
samples/cpp/cmake/: CMakeLists.txt  Makefile
samples/cpp/cmake/src/: Counter.cpp  Counter.h  main.cpp
samples/cpp/gtest/: Makefile
samples/docker/: README.md
samples/docker/compose/: docker-compose.yaml
samples/docker/scripts/: run_docker_nginx.sh
samples/go/: README.md
samples/gtest/: test_sample.cpp
samples/java/: README.md
samples/java/console/: settings.gradle.kts
samples/java/console/app/: build.gradle.kts
samples/java/console/app/src/main/java/com/incycle/console/: App.java
samples/java/console/app/src/test/java/com/incycle/console/: AppTest.java
samples/java/jsp/: .gitattributes  settings.gradle.kts
samples/java/jsp/app/: build.gradle.kts
samples/java/jsp/app/src/main/java/com/incycle/servlet/: DefaultServlet.java  Test1.java
samples/java/jsp/app/src/main/java/com/incycle/utils/: Utils.java
samples/java/jsp/app/src/main/webapp/: index.jsp
samples/java/jsp/app/src/main/webapp/WEB-INF/: web.xml
samples/java/jsp/app/src/test/java/com/incycle/servlet/: Test1Test.java
samples/java/jsp/database/: inventory.db
samples/nodejs/: README.md  http-server.js  package-lock.json  package.json
scripts/: Vagrantfile  Vagrantfile-full  install_go.sh  install_node.sh  ubuntu24-lite.sh  ubuntu24.sh
